# lettuce-3D-segmentation

./: .gitignore  README.md
data/: readme.md
data/cos-example/: center.csv  pc-neighbor-centers.pcd  pc-plant.pcd  readme.md  z0.csv
data/iceberg-example/: center.csv  pc-neighbor-centers.pcd  pc-plant.pcd  readme.md
src/: readme.md
src/pcl-extract-lettuce-features/: CMakeLists.txt  readme.md
src/pcl-extract-lettuce-features/src/: main.cpp  pcloader.h
src/pcl-label-cloud/: CMakeLists.txt  readme.md
src/pcl-label-cloud/src/: main.cpp  pcloader.cpp
src/pcl-segment-lettuce/: CMakeLists.txt  readme.md
src/pcl-segment-lettuce/src/: main.cpp  pcloader.cpp  pcviewer.cpp  pcviewer.h
src/pcl-select-center/: CMakeLists.txt  readme.md
src/pcl-select-center/src/: main.cpp
src/pcl-select-neighbor-centers/: CMakeLists.txt  readme.md
src/pcl-select-neighbor-centers/src/: main.cpp
